--- a/css/w3-style.css
+++ b/css/w3-style.css
@@ -2,127 +2,36 @@
 
 
 /* Normalize */
-html{
-	-ms-text-size-adjust:100%;
-	-webkit-text-size-adjust:100%;
-}
-body{
-	margin:0;
-}
-footer,header,main,menu,nav,section{
-	display:block;
-}
-[hidden],template{
-	display:none;
-}
-b,strong{
-	font-weight:bolder;
-}
-img{
-	border-style:none;
-}
-code,kbd,pre,samp{
-	font-family:monospace,monospace;
-	font-size:1em;
-}
-hr{
-	box-sizing:content-box;
-	height:0;
-	overflow:visible;
-}
-button,input,select,textarea,optgroup{
-	font:inherit;margin:0;
-}
-button,input{
-	overflow:visible;
-}
-button,select{
-	text-transform:none;
-}
-button,[type=button],[type=reset],[type=submit]{
-	-webkit-appearance:button;
-}
-button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{
-	border-style:none;
-	padding:0;
-}
-button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{
-	outline:1px dotted ButtonText;
-}
-textarea{
-	overflow:auto;
-}
-[type=checkbox],[type=radio]{
-	padding:0;
-}
-[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{
-	height:auto;
-}
-[type=search]{
-	-webkit-appearance:textfield;
-	outline-offset:-2px;
-}
-[type=search]::-webkit-search-decoration{
-	-webkit-appearance:none;
-}
-::-webkit-file-upload-button{
-	-webkit-appearance:button;font:inherit;
-}
-/* End extract */
+html{ -ms-text-size-adjust:100%; -webkit-text-size-adjust:100%; }
+body{ margin:0; }
+footer,header,main,menu,nav,section{ display:block; }
+[hidden],template{ display:none; }
+b,strong{ font-weight:bolder; }
+img{ border-style:none; }
+code,kbd,pre,samp{ font-family:monospace,monospace; font-size:1em; }
+hr{ box-sizing:content-box; height:0; overflow:visible; }
+button,input,select,textarea,optgroup{ font:inherit;margin:0; }
+button,input{ overflow:visible; }
+button,select{ text-transform:none; }
+button,[type=button],[type=reset],[type=submit]{ -webkit-appearance:button; }
+button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{ border-style:none; padding:0; }
+button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{ outline:1px dotted ButtonText; }
+textarea{ overflow:auto; }
 
 /* Standardize some settings */
-html,body{
-	font-family:Verdana,sans-serif;
-	font-size:16px;
-	line-height:1.5;
-}
-html{
-	overflow-x:hidden;
-}
+html{ overflow-x:hidden; }
+h1{ font-size:26px; }
+h2{ font-size:24px; }
+h3{ font-size:22px; }
+h4{ font-size:20px; }
+h5{ font-size:18px; }
+h6{ font-size:16px; }
 
-h1{
-	font-size:26px;
-}
-h2{
-	font-size:24px;
-}
-h3{
-	font-size:22px;
-}
-h4{
-	font-size:20px;
-}
-h5{
-	font-size:18px;
-}
-h6{
-	font-size:16px;
-}
-.w3-serif{
-	font-family:serif;
-}
-.w3-sans-serif{
-	font-family:sans-serif;
-}
-.w3-cursive{
-	font-family:cursive;
-}
-.w3-monospace{
-	font-family:monospace;
-}
+.w3-wide{ letter-spacing:4px; }
 
-.w3-wide{
-	letter-spacing:4px;
-}
-
-hr{
-	border:0;
-	border-top:1px solid #eee;
-	margin:20px 0;
-}
 
 /* w3-Stuff */
-.w3-image{max-width:100%;height:auto}img{vertical-align:middle}a{color:inherit}
+.w3-image{ max-width:100%;height:auto} img{vertical-align:middle} a{color:inherit}
 .w3-table,.w3-table-all{border-collapse:collapse;border-spacing:0;width:100%;display:table}.w3-table-all{border:1px solid #ccc}
 .w3-bordered tr,.w3-table-all tr{border-bottom:1px solid #ddd}.w3-striped tbody tr:nth-child(even){background-color:#f1f1f1}
 .w3-table-all tr:nth-child(odd){background-color:#fff}.w3-table-all tr:nth-child(even){background-color:#f1f1f1}
@@ -146,11 +55,9 @@ hr{
 .w3-dropdown-hover:hover > .w3-button:first-child,.w3-dropdown-click:hover > .w3-button:first-child{background-color:#ccc;color:#000}
 .w3-dropdown-content{cursor:auto;color:#000;background-color:#fff;display:none;position:absolute;min-width:160px;margin:0;padding:0;z-index:1}
 .w3-check,.w3-radio{width:24px;height:24px;position:relative;top:6px}
-.w3-sidebar{height:100%;width:200px;background-color:#fff;position:fixed!important;z-index:1;overflow:auto}
 .w3-bar-block .w3-dropdown-hover,.w3-bar-block .w3-dropdown-click{width:100%}
 .w3-bar-block .w3-dropdown-hover .w3-dropdown-content,.w3-bar-block .w3-dropdown-click .w3-dropdown-content{min-width:100%}
 .w3-bar-block .w3-dropdown-hover .w3-button,.w3-bar-block .w3-dropdown-click .w3-button{width:100%;text-align:left;padding:8px 16px}
-.w3-main,#main{transition:margin-left .4s}
 .w3-modal{z-index:3;display:none;padding-top:100px;position:fixed;left:0;top:0;width:100%;height:100%;overflow:auto;background-color:rgb(0,0,0);background-color:rgba(0,0,0,0.4)}
 .w3-modal-content{margin:auto;background-color:#fff;position:relative;padding:0;outline:0;width:600px}
 .w3-bar{width:100%;overflow:hidden}.w3-center .w3-bar{display:inline-block;width:auto}
