--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ nav .active { background: url( "../img/nav/btn_active.png" ); color: #ff0; text-
 /* Footer */
 footer { width: 100%; margin: 0px; height: 100%; background: #131B22; color: #777; }
 #footer_content { margin: auto; max-width: 980px; width: 95%; padding: 0px; background: #203A41; }
-#footer_box { border: 1px solid black; height: 100%; padding: 10px; }
+#footer_box { height: 100%; padding: 10px; }
 #footer_box p { padding: 5px; line-height: 1em; text-align:right; }
 #footer_box ul { list-style: none; }
 #footer_box a { text-decoration: none; }
