--- a/css/style.css
+++ b/css/style.css
@@ -1,97 +1,205 @@
+/* Webfurious Designs website style sheet
+Author : Tony AuBuChon
+Date : 03/08/2021
+Desc: Master style sheet
+Copyright 2021 Webfurious Designs
+*/
+
 @charset "utf-8";
 
 .clearfix::after { content:""; display: table; clear: both; }
-
 * { -moz-box-sizing:border-box; -webkit-box-sizing:border-box; box-sizing:border-box; }
-h1, h2, h3, h4, h5, h6 { margin:0; padding0; }
-p { margin: 0; padding: 0; }
-body,h1,h2,h3,h4,h5,h6 { font-family: "Lato", sans-serif; }
+body { background: url( '../img/bg_2.jpg'); font-family: 'Lato', Arial, Helvetica, sans-serif; margin: 0; padding: 0; }
 
-/* Wrappers */
-#wrapper_body { margin: auto; width: 100%; background: url('../img/bg_2.jpg'); }
-#wrapper_header { margin: 0; padding: 0; width: 100%; height: 175px; background: #203A41; background: url( "../img/header_bg.jpg" ); }
-#wrapper_header_content { margin: auto; max-width: 980px; }
-#wrapper_content { margin: auto; max-width: 980px; width: 95%; padding: 20px; background: #ccc }
-/* END Wrappers */
+header { width: 100%; margin: 0px; background: url( "../img/header_bg.jpg"); }
+#top-bar { margin: auto; height: 27px; background: url( "../img/topbar_bg.png" ) no-repeat; background-size: 100% 27px; }
 
-.div-bar { height: 5px; width: 100%; background: url('../img/div-bar.jpg'); background-repeat: repeat-x; }
+#top-bar img { width: 18px; height: 18px; float: right; margin: 3px 10px 0 0; }
+#top-bar img:hover { width: 24px; height: 24px; }
 
-/* Header Area */
-#top_bar { height: 28px; max-width: 100%; margin: auto; }
+#logo { padding-top: 20px; padding-bottom: 20px; }
+#logo img { max-width: 100%; }
 
-#logo { max-width: 100%; height: auto; }
-/* Header Area End */
-
-/* Navigation area */
-nav { background: url( "../img/nav_bg.jpg" ); height: 35px; text-transform: uppercase; font-size: 14px; }
-nav ul { list-style-type: none; margin: auto; max-width: 980px; width: 95%; padding: 0; overflow: hidden; top: 0; }
-nav li { float: left; width: 100px; margin-right: 2px; }
-nav li a { display: block; color: #263441; text-align: center; padding: 7px 10px; text-decoration: none; text-shadow: 1px 1px 2px #fff; height: 34px;}
-nav li a:hover { background: url( "../img/nav/btn_active.png" ); color: #ff0; text-shadow: 2px 2px 3px #000; }
-nav .active { background: url( "../img/nav/btn_active.png" ); color: #ff0; text-shadow: 1px 1px #000; }
-/* END Main Navigation */
-
-/* Slider */
-#slider { width: 100%; height: 490px; background: url( '../img/slides/slide02-bg.jpg'); }
-#slides { max-width: 980px; margin: auto; }
-
-#about h3 { color: #333; text-align: center; padding-bottom: 10px; }
-#about h6 { color: #555; margin-bottom: 10px; text-align: center; }
-#about p { padding: 10px; font-size: 18px; }
-
-
-
-/* Services Section */
-#services_box { float: left; margin: auto; width: 33.33333%; padding: 0 5px;}
-#services_content { height: 100%; padding: 10px; }
-#services_box p { padding: 2px; line-height: 1.2em; color: #646464; }
-#services_box h3 { color: #444; padding-bottom: 5px; }
-
-.icon {
-	overflow:hidden;
-	float:left;
-	margin:3px 20px 0 0;
+#quote-btn { 
+	background: #909b19; 
+	color: #333; 
+	border-radius: 10px; 
+	text-align: center; 
+	text-decoration: none; 
+	text-shadow: .5px .5px 0 #fff;
+	font-weight: 600;
+	font-size: 16px; 
+	cursor: pointer;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	box-shadow: 0 0 10px #000;
+	padding: 10px; 
+	margin-top: 50px; 
+	float: left;
 }
-.ico { width: 64px; height: 64px; }
-/* END Services */
+#quote-btn:hover { color: #ff0; background: #abb71e; text-shadow: .5px .5px 1px #333; }
 
+#maint { float: left; width: 150px; height: 25px; margin-left: 10px; background: url( "../img/icons/undermaint.png" ); }
 
+/* Main Navigation */
+nav { width: 100%; height: 37px; background: url( "../img/nav_bg.jpg"); text-transform: uppercase; display: block; }
 
-/* Recent Section */
-#recent h3 { padding-left: 5px; pading-bottom: 10px; color: #444; }
-#recent_gallery { float: left; margin: auto; width: 24.99999%; padding: 5px; }
-#recent_gallery:hover { border: 1px solid #000; box-shadow: 0px 0px 3px #333; }
-
-#recent_galery img { width: 100%; height: auto; }
-#recent_img { float: left; margin 5px auto; width: 24.99999% padding: 0 5px; }
-/* END Recent Section */
-
-/* Testimonials */
-#testimonials { padding: 30px; }
-#testimonials h5 { color: #444; }
-#testimonials p { color: #676767; }
-#testimonial { }
-/* END Testimonials */
-
-
-/* Footer */
-footer { width: 100%; margin: 0px; height: 100%; background: #131B22; color: #777; }
-#footer_content { margin: auto; max-width: 980px; width: 95%; padding: 0px; background: #203A41; }
-#footer_box { height: 100%; padding: 10px; }
-#footer_box p { padding: 5px; line-height: 1em; text-align:right; }
-#footer_box ul { list-style: none; }
-#footer_box a { text-decoration: none; }
-/* END Footer */
-
-/* Copyright */
-#copyright { background: #0C1014; height: auto; width: 100%; padding: 10px; }
-#copyright p{ color: #444; height: auto; text-align: center; font-weight: 500; letter-spacing: 1px; }
-/* END Copyright */
-
-/* Responsive */
-@media only screen and (max-width: 768px) {
-	#services_box { width: 49.99999%; margin: 5px 0; }
+nav a { 
+	display: inline-block;
+	color: #263441;
+	text-decoration: none;
+	text-shadow: 1px 1px #fff; 
+	text-align: center;
+	width: 100px;
+	height: 34px;
+	padding-top: 6px;
 }
-@media only screen and (max-width: 600px) {
-	#services_box { width: 100%; margin: 5px 0; }
+nav a:hover { 
+	display: inline-block;
+	color: #FF0;
+	text-decoration: none;
+	text-shadow: 1px 1px #000; 
+	background: url('../img/nav/btn_active.png');
+	width: 100px;
+	transition: 300ms all linear;
+	-o-transform: 300ms all linear;
+	-moz-webkit-transition: 300ms all linear;
+	-webkit-transition: 300ms all linear;
 }
+nav a.active { 
+	display: inline-block;
+	color: #FF0;
+	text-decoration: none;
+	text-shadow: 1px 1px #000; 
+	background: url('../img/nav/btn_active.png');
+	width: 100px;
+	transition: 300ms all linear;
+	-o-transform: 300ms all linear;
+	-moz-webkit-transition: 300ms all linear;
+	-webkit-transition: 300ms all linear;
+}
+/* End Main Navigation */
+
+#slider { width: 100%; height: 491px; background: url( '../img/slider/slide02-bg.jpg'); }
+
+#about { 
+	display: block;
+	width: 100%; 
+	height: 100%; 
+	background: #909b19; 
+	margin: 0;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #ffffff;
+	padding-top: 30px;
+}
+#about h2 { 
+	text-align: center; 
+	letter-spacing: 2px; 
+	text-shadow: 0.5px 0.5px 0px #fff; 
+	font-weight: 500;
+	color: #222;
+	margin: 0;
+}
+#about h4 { 
+	font-style: italic; 
+	text-align: center; 
+	text-shadow: 0.5px 0.5px 0px #fff; 
+	color: #333;
+	margin: 0;
+	padding-bottom: 30px;
+	font-weight: 500;
+	width: 100%;
+}
+
+
+.icon { overflow:hidden; float:left; margin:10px 20px 0 0; }
+.ico1 {background:url(../img/icons/ico1.png) no-repeat; width:60px; height:60px;}
+.ico2 {background:url(../img/icons/ico2.png) no-repeat; width:60px; height:60px;}
+.ico3 {background:url(../img/icons/ico3.png) no-repeat; width:60px; height:60px;}
+
+#recent { display: block; }
+#recent h1 { font-size: 22px; letter-spacing: 2px; text-shadow: .5px .5px 0 #fff; }
+#recent img { box-shadow: 1px 1px 10px #333; border: 5px solid #fff; float: left; }
+
+#main-content { float: left; width: 75%; }
+
+#main-content h1 { font-size: 24px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#main-content h2 { font-size: 20px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#main-content p { padding-right: 40px; }
+
+#featured h3 { font-size: 22px; font-weight: 500; color: #222; margin: 0; text-shadow: .5px .5px 0 #fff; }
+#featured p { font-size: 14px; color: #222; margin: 5px 0; }
+#featured { float: left; width: 25%; }
+
+/* check color*/
+.check-color { padding:0; line-height:26px; text-decoration: none; list-style: none; }
+.check-color ul { margin:0 0 0 -2px; }
+.check-color li { padding:0 0 0 20px; background:url( '../img/icons/arrow.png' ) no-repeat 0 6px; }
+
+/* Quote Box */
+#quote { width: 100%; height: 100%; padding: 20px; background: #ccc; border-radius: 15px; }
+#quote h1 { font-size: 18px; font-weight: 500; color: #333; text-shadow: .5px .5px 0 #fff; margin: 0; }
+#quote p { color: #333; margin: 5px 0; padding: 0; }
+
+#quote-button { 
+	background: #909b19; 
+	color: #333; 
+	border-radius: 10px; 
+	text-align: center; 
+	text-decoration: none; 
+	text-shadow: .5px .5px 0 #fff;
+	font-weight: 600;
+	font-size: 16px; 
+	margin-top: 20px; 
+	margin-right: 30px;
+	cursor: pointer;
+	-webkit-transition-duration: 0.4s; /* Safari */
+	transition-duration: 0.4s;
+	box-shadow: 0 2px 5px #333;
+	padding: 10px; 
+	float: right;
+}
+#quote-button:hover { color: #ff0; background: #abb71e; text-shadow: .5px .5px 1px #333; }
+
+@media screen and (max-width: 480px) {
+	#quote-button { float: left; margin: 10px 0 10px 0; }
+}
+
+footer { margin-bottom: 0; width: 100%; height: 100%; background: url('../img/footer_bg.jpg'); }
+#footer_top { width: 100%; height: 25px; background: url('../img/footer_top.jpg'); }
+footer h1 { font-size: 24px; padding: 10px 0 10px 0; color: #3e7180; text-shadow: 1px 1px 2px #000; }
+#contact p { margin: 0; color: #ccc; }
+#contact img { padding: 5px 5px 20px 0; }
+#contact h6 { font-size: 18px; margin: 0; padding-top: 20px; color: #ff0; text-shadow: 1px 1px 2px #000; }
+
+#links { text-align: center; }
+#links a { text-decoration: none; color: #ccc; display: block; }
+#links a:hover { color: #ff0; font-weight: 700; }
+
+#features { text-align: right; }
+#features img { margin: 5px; width: 25%; box-shadow: .5px .5px 10px #000; }
+#features img:hover { box-shadow: 0 0 10px #fff; } 
+
+#copyright { width: 100%; height: 40px; text-align: center; background: url('../img/footer_bottom.jpg'); padding-top: 10px; }
+#copyright p { color: #777; margin: 0px; height: 100%; width: 100%; }
+
+@media screen and (max-width: 480px) {
+	#contact { text-align: center; }
+	#links { text-align: center; }
+	#features { text-align: center; margin-bottom: 10px; }
+}
+
+
+#services-print { padding: 20px 10px 20px 10px; }
+#services-print h1 { font-size: 32px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#services-print img { margin: auto;}
+#services-web { padding-top: 30px; float: left; }
+#services-web h1 { font-size: 32px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#services-ident { padding-top: 30px; float: left; }
+#services-ident h1 { font-size: 32px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+
+#portfolio h1 { font-size: 32px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#portfolio img { margin: 20px; box-shadow: 0 0 10px #000; }
+
+#contact-info h1 { font-size: 32px; color: #222; text-shadow: .5px .5px 0 #fff; font-weight: 500; }
+#contact-map img { box-shadow: 0 0 10px #000; margin-top: 20px; width: 100%; }
