--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,7 @@ nav a.active {
 }
 /* End Main Navigation */
 
-#slider { width: 100%; height: 491px; background: url( '../img/slider/slide02-bg.jpg'); }
+#slider { width: 100%; height: 491px; background: url( '../img/slider/slider-bg.jpg'); }
 
 #about { 
 	display: block;
